blocks/hero/hero.css
/* block specific CSS goes here */

.hero {
  height: 254px;
  width: 100%;
  overflow: hidden;
}

.hero::before {
  inset: 24px 24px 254px 24px;
  width: calc(100% - 48px);
  height: calc(100% - 24px);
  content: '';
  display: block;
  background: #ED2224;
  z-index: -1;
  position: absolute;
  border-radius: 8px;
}

.hero h1 {
  position: relative;
  margin: 3rem auto 0;
  padding: 0 3rem;
  max-width: 1200px;
  color: var(--color-white);
  color: white;
  font-size: var(--type-heading-xl-lh);
  line-height: 67.5px;
  text-align: center;
  z-index: 1;
}

.hero img {
  position: absolute;
  object-fit: cover;
  height: calc(100% - 24px);
  width: calc(100% - 48px);
  margin: 24px;
  top: 0;
  z-index: 0;
  border-radius: 8px;
}

@media (min-width: 600px) {

  .hero {
    position: absolute;
  }

  .hero img {
    z-index: -1;
  }
  
}

